<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.newdingwen.tankworldtool.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="56dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="fill_horizontal|center_vertical"
            >

            <LinearLayout
                android:id="@+id/heavyTankLinearLay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/heavyTank" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mediumTankLinearLay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/mediumTank" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lightTankLinearLay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/lightTank" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tankDestroyerLinearLay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tankDestroyer" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/selfPropelledGunLinearLay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/selfPropelledGun" />
            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/tankList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
